# Resonant_Substrate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Fine-structureDualDerivations.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: GITHUB_COPILOT_AGENT_IRH_v24.md  copilot-instructions.md  pull_request_template.md
.github/agents/: irh-v24-architect.agent.md
.github/workflows/: ci.yml  compliance_check.yml  irh_validation.yml  nightly_comprehensive.yml
docs/newfoundation/: COPY_EVERYTHING_FROM_LINK_IN_THIS_FOLDER.txt  Claude (2).mht  Deep Explain _ GPAI (4).mht  IRH22.1DRAFT.txt  IRH22.2.md  IRH22.7.md  IRH22.8.md  IRH23.0A.md  IRH23.0B.md  IRH_Phase3_Toolkit.py  IRH_phase2.ipynb  IRH_v24_Final_Manuscript.md  IntrinsicResonanceHolographyEmbed.tex.txt  Manuscript_Final_Form_Creation_Prompt.md  The_Mathmatician.agent.md  chatgpt_symbol_verified.txt  copilot-instructions.md  requirements_1.txt
docs/newfoundation/newer/: IRH21.8.1.md  IRH22.8.md  IRH_Computational_Fra.md  IRH_Phase3_Toolkit.py  README.md  continue_this_responseIRH23.0.txt  copilot_agent_prompt.html  error-eating.agent.md  from_information_to_vibration.md  requirements.txt  run_phase3_demo_1.py  setup.py
examples/: basic_usage.py
notebooks/: 01_introduction.ipynb
scripts/: audit_equation_implementations.py  check_dimensional_consistency.py  detect_circular_reasoning.py  generate_validation_report.py  validate_derivation_chains.py  verify_compliance.py  verify_mathematical_identities.py  verify_numerical_precision.py  verify_theoretical_annotations.py
src/irh/: __init__.py  cli.py
src/irh/core/: __init__.py  framework.py
src/irh/optimization/: __init__.py
src/irh/physics/: __init__.py
src/logging/: __init__.py  transparency_engine.py
tests/: test_framework.py
tests/benchmarks/: __init__.py
tests/convergence/: __init__.py
tests/integration/: __init__.py
tests/theoretical_invariants/: __init__.py
tests/unit/: __init__.py  test_placeholder.py
