[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resonant-substrate"
version = "0.1.0"
description = "Computational framework for Intrinsic Resonance Holography (IRH) theory"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brandon McCrary", email = "brandon@resonantsubstrate.org"}
]
keywords = ["physics", "theoretical-physics", "quantum", "holography", "resonance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.9",
    "matplotlib>=3.4.0",
    "h5py>=3.2.0",
    "pandas>=1.3.0",
    "numba>=0.55.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.950",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "ruff>=0.0.250",
]
viz = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
]
hpc = [
    "mpi4py>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/brandonmccraryresearch-cloud/Resonant_Substrate"
Documentation = "https://github.com/brandonmccraryresearch-cloud/Resonant_Substrate/tree/main/docs"
Repository = "https://github.com/brandonmccraryresearch-cloud/Resonant_Substrate"
Issues = "https://github.com/brandonmccraryresearch-cloud/Resonant_Substrate/issues"

[project.scripts]
irh-run = "irh.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=irh --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
